test/data/semantic-errors/type-mismatch-lists.ava
var x = [ [1,2,3], 1, "x" ];

var y = [ "a",  2 ];